2006-08-11  Corinna Vinschen  <corinna@vinschen.de>

	* shared.cc (open_shared): Desperately try to get shared memory, only
	when DEBUGGING enabled for now.

2006-08-10  Christopher Faylor  <cgf@timesys.com>

	* pinfo.cc (_onreturn::~onreturn): Don't attempt to close a NULL
	handle.

2006-08-10  Christopher Faylor  <cgf@timesys.com>

	* winsup.h: Turn on DEBUGGING by default for now.

2006-08-10  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::lock): Handle
	ERROR_NOT_LOCKED returned from UnlockFileEx.

2006-08-09  Corinna Vinschen  <corinna@vinschen.de>

	* path.h (SYMLINK_EA_NAME): Remove.
	(SHORTCUT_HDR_SIZE): Ditto.

2006-08-09  Christopher Faylor  <cgf@timesys.com>

	* autoload.cc (GetHandleInformation): Declare new function.
	(SetHandleInformation): Ditto.
	* debug.cc (add_handle): Use SetHandleInformation to protect handle.
	(close_handle): Use SetHandleInformation to unprotect handle.

	* spawn.cc (spawn_guts): Move detached test outside of P_OVERLAY block.

2006-08-07  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (NtSetInformationFile): Define.
	* cygwin.din: Export posix_fadvise and posix_fallocate.
	* fhandler.cc (fhandler_base::fadvise): New method.
	(fhandler_base::ftruncate): Add allow_truncate parameter.
	* fhandler.h (class fhandler_base): Add fadvise method.  Accomodate
	new parameter to ftruncate.
	(class fhandler_pipe): Add fadvise and ftruncate methods.
	(class fhandler_disk_file): Add fadvise method.  Accomodate new
	parameter to ftruncate.
	* fhandler_disk_file.cc (fhandler_disk_file::fadvise): New method.
	(fhandler_disk_file::ftruncate): Accomodate new allow_truncate
	parameter.  Set EOF using NtSetInformationFile on NT.
	* ntdll.h (struct _FILE_END_OF_FILE_INFORMATION): Define.
	(NtSetInformationFile): Declare.
	* pipe.cc (fhandler_pipe::fadvise): New method.
	(fhandler_pipe::ftruncate): Ditto.
	* syscalls.cc (posix_fadvise): New function.
	(posix_fallocate): Ditto.